--- a/app/src/main/res/layout/latest_messages_row.xml
+++ b/app/src/main/res/layout/latest_messages_row.xml
@@ -62,5 +62,25 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/imgLatestMessage"
         app:layout_constraintTop_toBottomOf="@+id/tvLatestUsername" />
+
+    <TextView
+        android:id="@+id/latest_uid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="65dp"
+        android:layout_marginTop="16dp"
+        android:visibility="invisible"
+        app:layout_constraintStart_toEndOf="@+id/tvLatestUsername"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/latest_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="18dp"
+        android:visibility="invisible"
+        app:layout_constraintStart_toEndOf="@+id/latest_uid"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
